fixed issues with page breakout on mobile

--- a/Styles/Home/contact.scss
+++ b/Styles/Home/contact.scss
@@ -3,7 +3,7 @@
 
 .contact-page {
     display: grid;
-    grid-template: "banner" minmax(30vh, auto) "form" 1fr / 1fr;
+    grid-template: "banner" minmax(30vh, auto) "form" 1fr / minmax(0px, 1fr);
     margin-bottom: 5vh;
 }
 
@@ -12,6 +12,7 @@
     justify-self: center;
     text-align: center;
     display: grid;
+    grid-template-columns: minmax(0px, auto);
     align-content: end;
     font-size: 1.2rem;
     color: $HeaderTextColour;
@@ -19,7 +20,6 @@
 
     h1 {
         text-transform: uppercase;
-        white-space: nowrap;
         text-align: justify;
         text-align-last: justify;
         text-justify: inter-character;
